tests/negative/Test6.sp
(* Testing extra comma on function call *)

f(3,      );